--- a/share/mrxvtrc.sample
+++ b/share/mrxvtrc.sample
@@ -265,11 +265,12 @@ Mrxvt.macro.Ctrl+Shift+F4:	NewTab -4
 # Save the scroll back buffer to a file, and open it (in less / vim) in a new
 # tab. Useful for searching, or cut/paste from the scroll back buffer.
 #
-Mrxvt.macro.Primary+Ctrl+Shift+question: PrintScreen -ps perl -e '$_=join("",<STDIN>); s/\n+$/\n/g; print' > /tmp/scrollback
+Mrxvt.macro.Primary+Ctrl+Shift+question: PrintScreen -ps perl -e '$_=join("",<STDIN>); s/\n+$/\n/g; print' > /tmp/%p-scrollback
 Mrxvt.macro.Primary+Add+Ctrl+Shift+question: NewTab "(Tab %n scrollback)" \!less -ifLR +G /tmp/%p-scrollback; rm /tmp/%p-scrollback
 
-Mrxvt.macro.Primary+Ctrl+slash: PrintScreen -s perl -e '$_=join("",<STDIN>); s/\n+$/\n/g; print' > /tmp/scrollback
-Mrxvt.macro.Primary+Add+Ctrl+slash: NewTab "(Tab %n scrollback)" view +"syn off|set nospell notitle |normal G" /tmp/%p-scrollback; rm /tmp/%p-scrollback
+Mrxvt.macro.Primary+Ctrl+slash: PrintScreen -s perl -e '$_=join("",<STDIN>); s/\n+$/\n/g; print' > /tmp/%p-scrollback
+Mrxvt.macro.Primary+Add+Ctrl+slash: NewTab "(Tab %n scrollback)" \!view +"syn off| set nospell notitle noreadonly modifiable buftype=nofile |normal G" /tmp/%p-scrollback; rm /tmp/%p-scrollback
+
 
 
 # ---------------------------------------------------------------------------- #
