--- a/share/mrxvtrc.sample
+++ b/share/mrxvtrc.sample
@@ -272,6 +272,14 @@ Mrxvt.macro.Primary+Ctrl+slash: PrintScreen -s perl -e '$_=join("",<STDIN>); s/\
 Mrxvt.macro.Primary+Add+Ctrl+slash: NewTab "(Tab %n scrollback)" \!view +"syn off| set nospell notitle noreadonly modifiable buftype=nofile |normal G" /tmp/%p-scrollback; rm /tmp/%p-scrollback
 
 
+#
+# When running a shell, this clears the scroll back buffer and executes the
+# current command. Useful if you're going to (or have just) run a command that
+# produces a lot of output. (Primary screen only).
+#
+Mrxvt.macro.Primary+Shift+Return:	Esc \ec
+Mrxvt.macro.Primary+Add+Shift+Return:	Str ^M
+
 
 # ---------------------------------------------------------------------------- #
 
