Added mrxvt.terminfo to source distribution
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@243 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/share/Makefile.am
+++ b/share/Makefile.am
@@ -39,6 +39,7 @@ pixmapdir = $(datadir)/pixmaps
 # buildsdir = $(pkgdatadir)/builds
 
 dist_etc_DATA  =    etc/XTerm.ad		\
+		    etc/mrxvt.terminfo		\
 		    etc/rxvt.termcap		\
       		    etc/rxvt.terminfo
 etcdir = $(docdir)/etc
