Added NetBSD portability patches by Tobias Nygren <tnn@netbsd.org>
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@253 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/configure.ac
+++ b/configure.ac
@@ -680,7 +680,7 @@ AC_ARG_ENABLE(
     AC_HELP_STRING([--enable-use-fifo],[Enable listening for macros on a fifo [[yes]]]),
     [use_fifo=$enableval]
 )
-if test "x$use_fifo" == "xyes"; then
+if test "x$use_fifo" = "xyes"; then
     AC_DEFINE(USE_FIFO, [], [Enable listening for macros on a fifo])
 fi
 
