Made comment match example for autoHideTabbar
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@283 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/share/mrxvtrc.sample
+++ b/share/mrxvtrc.sample
@@ -37,7 +37,7 @@
 Mrxvt.bottomTabbar:		True
 
 # Only show the tab bar if there is more than one tab.
-Mrxvt.autohideTabbar:		False
+Mrxvt.autohideTabbar:		True
 
 # The number of tabs to attempt to keep visible. The width of tabs will shrink
 # to keep at least these many tabs visible.
