--- a/share/mrxvtrc.sample
+++ b/share/mrxvtrc.sample
@@ -71,6 +71,13 @@ Mrxvt.tabForeground:		#9a9a9a
 # Mrxvt.tabbarPixmap:		tabbarbg.png
 # Mrxvt.tabUsePixmap:		false
 
+# Monitor tabs for activity or inactivity
+# (alternate arguments for MonitorTab macro : "INACTIVITY" / "ACTIVITY")
+Mrxvt.macro.Ctrl+Shift+w:   MonitorTab AUTO
+#Mrxvt.monitorTimeout:          2000
+#Mrxvt.monitorCommand:          play ~/.ding_sound.wav
+
+
 #
 # ---------------------- SCROLLING / SCROLLBAR OPTIONS ----------------------- #
 #
