Ctrl-Shift-W is already used, so don't rebind it by default.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@297 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/share/mrxvtrc.sample
+++ b/share/mrxvtrc.sample
@@ -73,7 +73,7 @@ Mrxvt.tabForeground:		#9a9a9a
 
 # Monitor tabs for activity or inactivity
 # (alternate arguments for MonitorTab macro : "INACTIVITY" / "ACTIVITY")
-Mrxvt.macro.Ctrl+Shift+w:   MonitorTab AUTO
+#Mrxvt.macro.Ctrl+Shift+w:   MonitorTab AUTO
 #Mrxvt.monitorTimeout:          2000
 #Mrxvt.monitorCommand:          play ~/.ding_sound.wav
 
