Use XkbBell instead of XBell. This is to work around a bug in the evdev keyboard driver. See http://bugs.freedesktop.org/show_bug.cgi?id=24503.
Also correct fprintf format string in xdefaults.c


git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@403 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/configure.ac
+++ b/configure.ac
@@ -869,6 +869,8 @@ AC_CHECK_LIB(
     AC_MSG_ERROR([Mrxvt requires the libX11 libraries.])
 )
 
+AC_CHECK_HEADERS(X11/XKBlib.h)
+
 dnl AC_CHECK_LIB(
 dnl     Xext,
 dnl     XextAddDisplay,
